# ARIAC_paper_code

./: README.md
paper_ws/: CMakeLists.txt  README.md  package.xml
paper_ws/action/: Grasp.action
paper_ws/behaviors/: ceiling_action_servers.py  ceiling_behaviors.py  execute_tree_1.py  floor_1_action_servers.py  floor_behaviors.py  test_tree.py
paper_ws/config/: sensors.yaml
paper_ws/launch/: agent.launch.py  start_competition.launch.py  start_competition.py  tree.launch.py
paper_ws/msg/: Plan.msg
paper_ws/paper_ws/: Kinematics.py  ariac_task_domain.pddl  ariac_task_problem.pddl  data.py  interpolation.py  paper.py  robot_planner.py  test.py
paper_ws/scripts/: graph.py  start_tree.py
